-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
None
-
Windows 10 21H2
Qt 6.4.1
Emscripten 3.1.14
Chrome 108.0.5359.99 launched with the argument --enable-precise-memory-info
-
-
cc60d7069 (dev), 524a7c593 (6.5)
I found a memory leak in the Drad&Drop system with Qt,
In my sample (see attachement), i've made a bidirectional wrapper to allow the drag&drop of directories from the JS side.
For my test I've dropped some large files (~300Mo).
Without a.exec(), it's possible to drop many times the file, the JS Garbage Collector do it's job,
With a.exec() uncommented, the used memory keep growing after each drop.
For Gerrit Dashboard: QTBUG-109436 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
449670,5 | Avoid mutual ownership in qstdweb's File::stream | dev | qt/qtbase | Status: MERGED | +2 | 0 |
450342,2 | Avoid mutual ownership in qstdweb's File::stream | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |